fixes logotype on mobile

--- a/src/style.styl
+++ b/src/style.styl
@@ -210,16 +210,19 @@ a
 .logo
     *
         transition width .5s, margin .5s, top .5s, left .5s
+    
 
 .logotype
     text-align center
     +desktop()
         margin 40px auto 80px
     +tablet()
-        margin 40px auto 40px
+        margin 20px auto 40px
         width 200px
         height auto
-
+    svg 
+        +tablet()
+            width 200px
 .logomark
     display block
     text-align center
@@ -229,13 +232,13 @@ a
     background $main-color
     +desktop()
         padding 16px
-        margin 120px auto 40px
+        margin 120px auto 0px
         width 168px
         height 108px
         border-radius 35px
     +tablet()
         padding 10px
-        margin 40px auto 40px
+        margin 40px auto 0px
         width 108px
         height 68px
         border-radius 20px
